syntax = "proto3";
package service;
import "google/protobuf/timestamp.proto";
import "google/protobuf/validate.proto";

// 商品模型
message ProdModel {
    int32 prod_id = 1;
    string prod_name = 2;
    float prod_price = 3;
}
// 主订单模型
message OrderMain {
    int32 order_id = 1; // 订单id 数字自增
    string order_no = 2; // 订单号
    int32 user_id = 3; // 用户id
    float order_money = 4 [(validate.rules).float.gte = 1]; // 商品金额
    google.protobuf.Timestamp order_time = 5; // 订单时间
    repeated OrderDetail order_details = 6; // 嵌套子订单
}

message OrderDetail {
    int32 detail_id = 1;
    string order_no = 2;
    int32 prod_id = 3;
    float prod_price = 4;
    int32 prod_num = 5;
}

message UserInfo {
    int32 user_id=1;
    int32 user_score=2;
}