syntax = "proto3";
package service;
import "Models.proto";

// repeated 切片 传多个用户积分
message UserScoreRequest {
    repeated UserInfo users=1;
}
message UserScoreResponse {
    repeated UserInfo user=1;
}
service UserService {
    rpc GetUserScore(UserScoreRequest) returns (UserScoreResponse);
    rpc GetUserScoreByServerStream(UserScoreRequest) returns (stream UserScoreResponse); // 服务端 stream 流
    rpc GetUserScoreByClientStream(stream UserScoreRequest) returns (UserScoreResponse); // 客户端stream 流
    rpc GetUserScoreByTWS(stream UserScoreRequest) returns (stream UserScoreResponse); // 双向流
}